--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
+    "@mantine/core": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@mantine/next": "^6.0.21",
     "i18next": "23.7.3",
     "next": "^14.0.2",
     "next-i18next": "^15.0.0",
     "react": "^18.2.0",
-    "react-i18next": "^13.4.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
@@ -24,8 +27,8 @@
     "@types/react-dom": "^18.2.15",
     "eslint-config-next": "^14.0.2",
     "i18next-resources-for-ts": "1.4.0",
-    "rimraf": "^5.0.5",
     "picocolors": "^1.0.0",
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   }
 }
