--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mantine/core": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@mantine/next": "^6.0.21",
+    "@rainbow-me/rainbowkit": "^1.2.0",
     "i18next": "23.7.3",
     "next": "^14.0.2",
     "next-i18next": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.4.0"
+    "react-i18next": "^13.4.0",
+    "viem": "^1.19.3",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
